--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="/manifest.json" />
-    <title>API Testing App</title>
+    <title>Verification Page</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
